--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   },
   "dependencies": {
     "next": "^4.1.4",
+    "next-redux-wrapper": "^1.3.4",
     "node-fetch": "^1.7.3",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.76.0"
   }
 }
