--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^4.1.4",
-    "next-redux-wrapper": "^1.3.4",
-    "node-fetch": "^1.7.3",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.76.0"
+    "next": "^8.0.1",
+    "next-redux-wrapper": "^3.0.0-alpha.1",
+    "node-fetch": "^2.3.0",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.85.0"
   }
 }
