Update all dependencies and application to next.js 9

--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^8.0.1",
-    "next-redux-wrapper": "^3.0.0-alpha.1",
-    "node-fetch": "^2.3.0",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
+    "next": "^9.1.1",
+    "next-redux-wrapper": "^4.0.1",
+    "node-fetch": "^2.6.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.88.1"
   }
 }
